# PriviaSecurityInternshipChallenge

./: Rapor.md  Readme.md  pyproject.toml  requirements.txt
blog/: db.sqlite3
blog/api/: admin.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py
blog/api/migrations/: 0001_initial.py
blog/api/templates/api/: add.html  comment_add.html  comment_list.html  delete.html  detail.html  edit.html  index.html
blog/api/templates/base/: header.html
blog/api/templates/user/: login.html
blog/blog/: settings.py  urls.py
